tests/parser/should_fail/readFailTraditionalRecords1.hs

{-# LANGUAGE NoTraditionalRecordSyntax #-}

module ReadFailTraditionalRecords1 where

data Foo = Foo { i :: Int }
